<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<TextView
    android:id="@+id/tvDisplay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/texto_display"
    android:textSize="61sp"
    android:background="@color/black"
    android:padding="40dp"
    android:textAlignment="textEnd"
    android:textColor="@color/white">
</TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPorcentaje"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_porcentaje">
        </Button>

        <Button
            android:id="@+id/btnParentesis1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_parentesis1">
        </Button>

        <Button
            android:id="@+id/btnParentesis2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_parentesis2">
        </Button>

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_c">
        </Button>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSiete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_7">
        </Button>

        <Button
            android:id="@+id/btnOcho"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_8">
        </Button>

        <Button
            android:id="@+id/btnNueve"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_9">
        </Button>

        <Button
            android:id="@+id/btnMas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_mas">
        </Button>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="32sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCuatro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_4">
        </Button>

        <Button
            android:id="@+id/btnCinco"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_5">
        </Button>

        <Button
            android:id="@+id/btnSeis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_6">
        </Button>

        <Button
            android:id="@+id/btnMenos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_menos">
        </Button>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnUno"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_1">
        </Button>

        <Button
            android:id="@+id/btnDos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_2">
        </Button>

        <Button
            android:id="@+id/btnTres"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_3">
        </Button>

        <Button
            android:id="@+id/btnDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_division">
        </Button>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_dark"
            android:text="@string/boton_0">
        </Button>

        <Button
            android:id="@+id/btnPunto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_punto">
        </Button>

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_igual">
        </Button>

        <Button
            android:id="@+id/btnMulti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/boton_multi">
        </Button>
    </LinearLayout>


</LinearLayout>